Made QOL changes

--- a/text_signup.html
+++ b/text_signup.html
@@ -15,14 +15,14 @@
         Signup
 
         <form>
-            <label for="">
+            <label>
                 Phone #:
                 <input type="text">
             </label>
         </form>
         <div id="sign_up_tag">Updates on deals are just a phone number away!</div>
     </div>
-    <div id="return"><a href="index.html">Return</a></li></div>
+    <div id="return"><a href="index.html">Return</a></div>
     <img src="dean-0Rkd1r4ecT4-unsplash.jpg" class="footer_img" alt="">
 </body>
 </html>
