--- a/tues.html
+++ b/tues.html
@@ -12,7 +12,7 @@
     <h1 id="tagline">Connecting MSU Students and Businesses</h1>
     <ul id="days">
         <li><a href="index.html">Monday</a></li>
-        <li><a href="tues.html">Tuesday</a></li>
+        <li><a href="tues.html" class="current_day">Tuesday</a></li>
         <li><a href="wed.html">Wednesday</a></li>
         <li><a href="thur.html">Thursday</a></li>
         <li><a href="fri.html">Friday</a></li>
@@ -23,19 +23,19 @@
     <div class="resturaunt">
         <div class="items">
             <div class="rest_name">Harper's</div>
-            <div class="details">Test</div>
-            <div class="details">Test</div>
+            <div class="details">Sorry to say there are no deals here today</div>
             <div class="loc"><a href="https://goo.gl/maps/xEvjGe5sEeAnqTpaA" class="dir">131 Albert St</a>, (517) 333-4040</div>
         </div>
 
         <div class="items">
             <div class="rest_name">Dublin Square</div>
-            <div class="details">$4 basket of chips from 2pm until 7pm</div>
-            <div class="details">$9 combo platter from 2pm until 7pm</div>
-            <div class="details">$5 onion rings from 2pm until 7pm</div>
-            <div class="details">$5 chicken strips from 2pm until 7pm</div>
-            <div class="details">$5 potato skins from 2pm until 7pm</div>
-            <div class="details">$7 Irish nachos from 2pm until 7pm</div>
+            <div class="details">Happy hour from 2pm until 7pm:</div>
+            <div class="details">$4 basket of chips</div>
+            <div class="details">$9 combo platter</div>
+            <div class="details">$5 onion rings</div>
+            <div class="details">$5 chicken strips</div>
+            <div class="details">$5 potato skins</div>
+            <div class="details">$7 Irish nachos</div>
             <div class="loc"><a href="https://g.page/dublinsquareel?share" class="dir">327 Abbot Rd</a>, (517) 351-2222</div>
         </div>
 
@@ -71,7 +71,7 @@
                 <div class="details">$3 tequila shots</div>
                 <div class="details">$4 Jose Cuervo</div>
                 <div class="details">$3.50 Corona, Corona Light, or Dos XX</div>
-                <div class="details">Happy hour until 7pm</div>
+                <div class="details">Happy hour from 4:30pm until 7pm:</div>
                 <div class="details">Half off wells and mugs</div>
                 <div class="loc"><a href="https://g.page/crunchyseastlansing?share" class="dir">254 West Grand River</a>, (517) 351-2506</div>
             
@@ -85,7 +85,7 @@
 
         <div class="items">
             <div class="rest_name">Barrio</div>
-            <div class="details">All throughout December: Surf & turf taco,
+            <div class="details">All throughout December: Surf & turf tacos,
                 merry cherry guacamole, and holiday hash queso. Plus the drink
                 of the month, the Snowfall in Mexico
             </div>
@@ -94,6 +94,15 @@
 
     </div>
     
+    <ul id="days_bottom">
+        <li><a href="index.html">Monday</a></li>
+        <li><a href="tues.html" class="current_day">Tuesday</a></li>
+        <li><a href="wed.html">Wednesday</a></li>
+        <li><a href="thur.html">Thursday</a></li>
+        <li><a href="fri.html">Friday</a></li>
+        <li><a href="sat.html">Saturday</a></li>
+        <li><a href="sun.html">Sunday</a></li>
+    </ul>    
 
     <footer class="signup">
         <div>
