--- a/fri.html
+++ b/fri.html
@@ -65,7 +65,7 @@
                 <div class="details">$10.5 Crunchy Burger of Chicken Sandwhich with
                     optional $1 pint or $2 mug until 4:30pm
                 </div>
-                <div class="details">Happy hour from 4:30pm until 7pm</div>
+                <div class="details">Happy hour from 4:30pm until 7pm:</div>
                 <div class="details">Half off wells and mugs</div>
                 <div class="loc"><a href="https://g.page/crunchyseastlansing?share" class="dir">254 West Grand River</a>, (517) 351-2506</div>
             
@@ -74,7 +74,7 @@
         <div class="items">
             <div class="rest_name">The Riv</div>
             <div class="details">Sorry to say there are no deals here today</div>
-            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.AC. Ave</a>, (517) 351-5855</div>
+            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.A.C. Ave</a>, (517) 351-5855</div>
         </div>
 
         <div class="items">
