--- a/tues.html
+++ b/tues.html
@@ -80,7 +80,7 @@
         <div class="items">
             <div class="rest_name">The Riv</div>
             <div class="details">Sorry to say there are no deals here today</div>
-            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.AC. Ave</a>, (517) 351-5855</div>
+            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.A.C. Ave</a>, (517) 351-5855</div>
         </div>
 
         <div class="items">
