--- a/wed.html
+++ b/wed.html
@@ -24,7 +24,7 @@
         <div class="items">
                 <div class="rest_name">Harper's</div>
                 <div class="details">Half off drinks</div>
-                <div class="details">$10 pithcers</div>
+                <div class="details">$10 pitchers</div>
                 <div class="details">Live music</div>
                 <div class="loc"><a href="https://goo.gl/maps/xEvjGe5sEeAnqTpaA" class="dir">131 Albert St</a>, (517) 333-4040</div>
         </div>
@@ -76,7 +76,7 @@
         <div class="items">
             <div class="rest_name">The Riv</div>
             <div class="details">Sorry to say there are no deals here today</div>
-            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.AC. Ave</a>, (517) 351-5855</div>
+            <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.A.C. Ave</a>, (517) 351-5855</div>
         </div>
 
         <div class="items">
