--- a/tues.html
+++ b/tues.html
@@ -63,7 +63,7 @@
                 <div class="rest_name">Crunchy's</div>
                 <div class="details">$14 Nachos and a pitcher of beer</div>
                 <div class="details">$5 25oz Long Island Ice Tea</div>
-                <div class="details">$10.5 Crunchy Burger of Chicken Sandwhich with
+                <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
                     optional $1 pint or $2 mug until 4:30pm
                 </div>
                 <div class="details">$1 off of burritos, nachos, or taco plate</div>
