--- a/sat.html
+++ b/sat.html
@@ -75,8 +75,8 @@
             
                 <div class="rest_name">Barrio</div>
                 <div class="details">All throughout December: Surf & turf tacos,
-                    merry cherry guacamole, and holiday hash queso. Plus the drink
-                    of the month, the Snowfall in Mexico
+                    merry cherry guacamole, and holiday hash queso. The drink
+                    of the month is the Snowfall in Mexico
                 </div>
                 <div class="loc"><a href="https://goo.gl/maps/yiKu3ZiAPxDMEEPR9" class="dir">202 Albert St</a>, (517) 679-0063</div>
             
