--- a/thur.html
+++ b/thur.html
@@ -38,7 +38,7 @@
         <div class="items">
             
                 <div class="rest_name">Rick's</div>
-                <div class="details">$3 or less drinks</div>
+                <div class="details">Drinks $3 or less</div>
                 <div class="loc"><a href="https://goo.gl/maps/8H1Sy4nS1C3jf5cP8" class="dir">224 Abbot Rd</a>, (517) 351-2285</div>
             
         </div>
