--- a/thur.html
+++ b/thur.html
@@ -74,7 +74,7 @@
 
         <div class="items">
             <div class="rest_name">The Riv</div>
-            <div class="details">10am until 9pm is Burgerama, $4.25 pitchers of beer and $2.50 buger and fries</div>
+            <div class="details">10am until 9pm is Burgerama: $4.25 pitchers of beer and $2.50 burger and fries</div>
             <div class="loc"><a href="https://goo.gl/maps/fJ65XHzaPqMa4WEX8" class="dir">231 M.A.C. Ave</a>, (517) 351-5855</div>
         </div>
 
