--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="rest_name">Crunchy's</div>
             <div class="details">$14 Nachos and a pitcher of beer</div>
             <div class="details">$5 25oz Long Island Ice Tea</div>
-            <div class="details">$10.5 Crunchy Burger of Chicken Sandwhich with
-                optional $1 pint or $2 mug until 4:30pm
+            <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
+                $1 pint or $2 mug until 4:30pm
             </div>
             <div class="details">$6.50 quarter pounder cheeseburger</div>
             <div class="details">Half off drinks for hospitality workers</div>
