--- a/wed.html
+++ b/wed.html
@@ -63,7 +63,7 @@
                 <div class="details">$14 Nachos and a pitcher of beer</div>
                 <div class="details">$5 25oz Long Island Ice Tea</div>
                 <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
-                    optional $1 pint or $2 mug until 4:30pm
+                    $1 pint or $2 mug until 4:30pm
                 </div>
                 <div class="details">$1 off mugs of Labatt Blue</div>
                 <div class="details">$0.50 off mugs of craft beer</div>
