--- a/fri.html
+++ b/fri.html
@@ -62,8 +62,8 @@
                 <div class="rest_name">Crunchy's</div>
                 <div class="details">$14 Nachos and a pitcher of beer</div>
                 <div class="details">$5 25oz Long Island Ice Tea</div>
-                <div class="details">$10.5 Crunchy Burger of Chicken Sandwhich with
-                    optional $1 pint or $2 mug until 4:30pm
+                <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
+                    $1 pint or $2 mug until 4:30pm
                 </div>
                 <div class="details">Happy hour from 4:30pm until 7pm:</div>
                 <div class="details">Half off wells and mugs</div>
