--- a/thur.html
+++ b/thur.html
@@ -56,10 +56,10 @@
                 <div class="rest_name">Crunchy's</div>
                 <div class="details">$14 Nachos and a pitcher of beer</div>
                 <div class="details">$5 25oz Long Island Ice Tea</div>
-                <div class="details">$10.5 Crunchy Burger of Chicken Sandwhich with
-                    optional $1 pint or $2 mug until 4:30pm
+                <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
+                    $1 pint or $2 mug until 4:30pm
                 </div>
-                <div class="details">$14 Pizza and a pitcher</div>
+                <div class="details">$14 Pizza and a pitcher of beer</div>
                 <div class="details">Happy hour from 4:30pm until 7pm:</div>
                 <div class="details">Half off wells and mugs</div>
                 <div class="loc"><a href="https://g.page/crunchyseastlansing?share" class="dir">254 West Grand River</a>, (517) 351-2506</div>
