--- a/thur.html
+++ b/thur.html
@@ -56,7 +56,7 @@
                 <div class="rest_name">Crunchy's</div>
                 <div class="details">$14 Nachos and a pitcher of beer</div>
                 <div class="details">$5 25oz Long Island Ice Tea</div>
-                <div class="details">$10.5 Crunchy Burger or Chicken Sandwhich with
+                <div class="details">$10.5 Crunchy Burger or Chicken Sandwich with
                     $1 pint or $2 mug until 4:30pm
                 </div>
                 <div class="details">$14 Pizza and a pitcher of beer</div>
