updated the look of the site/ added pre-production

--- a/sun.html
+++ b/sun.html
@@ -62,7 +62,7 @@
         <div class="items">
             
                 <div class="rest_name">Crunchy's</div>
-                <div class="details">Large pizzas half off</div>
+                <div class="details">Half off large pizzas</div>
                 <div class="details">Half off wells and mugs of beer until 8pm</div>
                 <div class="details">Half off beer, liquor, and wine 8pm until close</div>
                 <div class="loc"><a href="https://g.page/crunchyseastlansing?share" class="dir">254 West Grand River</a>, (517) 351-2506</div>
